- fix `sidebar`: `collapse button`, fix sidebar styles; - fix styles for `page-wrapper` and `page-content`

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,7 +4,7 @@
 @import './theme/dark';
 
 .app {
-  min-height: 100vh;
+  height: 100vh;
   color: var(--color-text);
   background-color: var(--bg-main);
   font: var(--font-m);
