--- a/src/widgets/page-content/ui/page-content.module.scss
+++ b/src/widgets/page-content/ui/page-content.module.scss
@@ -1,3 +1,5 @@
 .page-content {
   display: flex;
+  gap: 15px;
+  height: calc(100vh - var(--navbar-height));
 }
