--- a/src/widgets/page-wrapper/ui/page-wrapper.module.scss
+++ b/src/widgets/page-wrapper/ui/page-wrapper.module.scss
@@ -3,6 +3,7 @@
   width: 100%;
   margin-left: max(0px, calc(100vw - 900px) / 2 - var(--sidebar-width));
   transition: margin 0.3s cubic-bezier(0.67, 0.02, 0.39, 0.98);
+  overflow-y: auto;
 }
 
 .sidebar-collapsed {
